# git-multi

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md
.github/workflows/: release.yml
assets/: git-multi.desktop
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  tui.rs  update.rs
